--- a/calculatorcss.css
+++ b/calculatorcss.css
@@ -1,10 +1,9 @@
 .size{
     width: 310px;
-    height: 350px;
+    height: 390px;
     border-radius: 10px;
     border: 2px solid white;
 }
-
 .btnsize{
     width: 55px;
     height: 40px;
@@ -20,3 +19,7 @@
     font-size: 25px;
     margin-right: 50px;
 }
+/* td{
+    margin-left: 0px;
+    margin-right: 0px;
+} */
